<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FormLabel"
        android:text="@string/personal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="360dp"
            android:src="@drawable/joy"
            android:padding="10dp" />

        <TextView
            android:id="@+id/nameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="26sp"
            android:fontFamily="sans-serif-black"
            android:padding="10dp" />

        <TextView
            android:id="@+id/emailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp" />
        <TextView
            android:id="@+id/occupationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="occupation"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp" />
        <TextView
            android:id="@+id/locationField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="location"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp" />
        <TextView
            android:id="@+id/usernameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp" />
        <TextView
            android:id="@+id/descriptionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="description"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp" />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/match" />
        <Button
            android:id="@+id/goToAnotherActivity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back"
            app:backgroundTint="#faa"
            />
            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>