<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/signup"
        app:layout_constraintEnd_toEndOf="@id/signup"
        app:layout_constraintStart_toStartOf="@id/signup"
        android:layout_marginTop="2pt"
        android:padding="5pt" />
    <EditText
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        app:layout_constraintTop_toBottomOf="@id/nameField"
        app:layout_constraintEnd_toEndOf="@id/signup"
        app:layout_constraintStart_toStartOf="@id/signup"
        android:layout_marginTop="2pt"
        android:padding="5pt" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@id/emailField"
        app:layout_constraintEnd_toEndOf="@id/signup"
        app:layout_constraintStart_toStartOf="@id/signup"
        android:layout_marginTop="2pt"
        android:padding="5pt" />
    <Button
        android:id="@+id/dateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickTime"
        android:onClick="showDatePickerDialog"
        app:layout_constraintTop_toBottomOf="@id/usernameField"
        app:layout_constraintEnd_toEndOf="@id/signup"
        app:layout_constraintStart_toStartOf="@id/signup"
        app:backgroundTint="#99c"
        android:textColor="@android:color/black"
        android:padding="5pt"
        />
    <EditText
        android:id="@+id/occupationField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/occupationHint"
        app:layout_constraintTop_toBottomOf="@id/dateOfBirth"
        app:layout_constraintEnd_toEndOf="@id/signup"
        app:layout_constraintStart_toStartOf="@id/signup"
        android:layout_marginTop="2pt"
        android:padding="5pt" />
    <EditText
        android:id="@+id/locationField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/locationHint"
        app:layout_constraintTop_toBottomOf="@id/occupationField"
        app:layout_constraintEnd_toEndOf="@id/signup"
        app:layout_constraintStart_toStartOf="@id/signup"
        android:layout_marginTop="2pt"
        android:padding="5pt" />
    <EditText
        android:id="@+id/descriptionField"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:hint="@string/descHint"
        app:layout_constraintTop_toBottomOf="@id/locationField"
        app:layout_constraintEnd_toEndOf="@id/signup"
        app:layout_constraintStart_toStartOf="@id/signup"
        android:layout_marginTop="2pt"
        android:padding="5pt" />




    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/personal"
        android:text="@string/formLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:textSize="34sp"
        android:textColor="@android:color/black"
        android:background="#99c"
        android:fontFamily="sans-serif-medium"
    />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FormLabel"
        android:text="@string/personal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup"
        android:text="@string/signupLabel"
        app:layout_constraintTop_toBottomOf="@id/personal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/personal"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:padding="2pt"
        android:textSize="25sp"
        android:textColor="@android:color/black"
    />

    <Button
        android:id="@+id/goToAnotherActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:backgroundTint="@android:color/holo_green_light"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/button1"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#99c"
        app:layout_constraintBottom_toTopOf="@id/FormLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>